apps/gitea/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: gitea-ingress
  namespace: gitea
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`gitea.sobrinho.pt`)
      kind: Rule
      services:
        - name: gitea
          port: main
  tls:
    secretName: gitea-cert
